public/assets/css/changePP.css
body {
  background-color: #007bff;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh; /*for normal zooming */
}
.container {
  background-color: white;
  border-radius: 2px;
  display: block;
  margin: auto;
  padding-top: 30px;
  padding-left: 50px;
  padding-right: 50px;
  padding-bottom: 20px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

label {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}
.header {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  font-size: xx-large;
  margin-bottom: 30px;
  font-weight: 500;
}
.normal-blue-font {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  color: #007bff;
  font-size: small;
  padding-bottom: 20px;
  text-decoration: none;
}

input[type="file"] {
  display: none;
}

.custom-file-upload {
  border: 1px solid #007bff;
  display: inline-block;
  padding: 6px 12px;
  cursor: pointer;
  color: #007bff;
  font-weight: normal;
  border-radius: 5px;
  font-size: 16px;
}
.custom-file-upload:hover{
    transition: ease-in-out 0.3s;
    background-color: #007bff;
    color:white;
}
.savebtn {
  color: white;
  padding-left: 40px;
  padding-right: 40px;
  padding-bottom: 10px;
  padding-top: 10px;
  border-radius: 4px;
  border: none;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  transition: ease-in-out 0.3s;
  font-weight: 500;
  font-size: 14px;
  background-color: #007bff;
}
.savebtn:hover {
  color: #007bff;
  background-color: rgb(255, 255, 255);
  font-weight: 500;
  border: 1px solid #007bff;
}

